@@ -611,6 +611,7 @@ silent6.test \
 silent7.test \
 silent9.test \
 silentlex.test \
+silentyacc.test \
 sinclude.test \
 srcsub.test \
 srcsub2.test \
