@@ -1,5 +1,9 @@
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	New test `silentyacc.test' (Automake silent-mode with Yacc).
+	* tests/silentyacc.test: New test.
+	* tests/Makefile.am (TESTS): Updated accordingly.
+
 	New test `silentlex.test' (Automake silent-mode with Lex).
 	* tests/silentlex.test: New test.
 	* tests/Makefile.am (TESTS): Updated accordingly.
